--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+
+<div class="container">
+    <div class="starter-template">
+        <h1>Taxi Service</h1>
+    </div>
+    <router-outlet></router-outlet>
+</div>
