--- a/src/app/order-detail-component/order-detail-component.component.scss
+++ b/src/app/order-detail-component/order-detail-component.component.scss
@@ -1,51 +1,4 @@
-$border: solid 1px #e7e7e7;
-$success: #28a745;
-$successHover: #218838;
-
-.order-wrap {
-  display: flex;
-  justify-content: center;
-
-  .order {
-    width: 300px;
-  }
-
-  .order-title {
-    text-align: center;
-  }
-
-  .order-properties {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 10px;
-    border-bottom: $border;
-
-    &-select {
-      width: 100px;
-      padding: 5px;
-      outline: none;
-    }
-  }
-
-  .btn {
-    border-radius: 5px;
-    color: #fff;
-    margin: 10px 0;
-    cursor: pointer;
-    outline: none;
-    font-size: 13px;
-    text-decoration: none;
-    padding: 5px 10px;
-
-    &-submit {
-      background: $success;
-      &:hover {
-        background: $successHover;
-
-      }
-    }
-  }
-
+.order {
+    width: 400px;
+    margin: 0 auto;
 }
-
-
